@@ -1,3 +1,7 @@
+2007-07-29 Jens Tkotz <jens@peino.de> 1.5.7-svn-b13
+
+ * Fix: It was possible to bypass the voting permission.
+
 2007-07-15 Jens Tkotz <jens@peino.de> 1.5.7-svn-b12
 
  * Change: Updated PEARs Mail/mimePart.php
